Fix styles on mobile and desktop devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,17 +15,19 @@ html {
     background-image:     -ms-linear-gradient(180deg, #455a64 20%, #1c313a 80%); 
     background-image:      -o-linear-gradient(180deg, #455a64 20%, #1c313a 80%); 
     background-image:         linear-gradient(180deg, #455a64 20%, #1c313a 80%);
-    height: 100%;
-    width: 100%;
+    min-height: 100vh;
 }
 body {
+    height: auto;
+    min-height: 100vh;
     max-width: 100vw;
     width: 100%;
-    height: 100%;
-    overflow: auto;
+    overflow-y: scroll;
+    overflow-x: hidden;
     font-family: 'Michroma', sans-serif;
     margin: 0;
     -webkit-tap-highlight-color: #cafa1d8f;
+    position: relative;
 }
 main {
     width: 100%;
@@ -35,14 +37,20 @@ main {
     padding: 10px 0;
     overflow-x: hidden;
 }
+footer {
+  position:absolute;
+  bottom:0;
+  left: 0;
+  width:100%;
+  margin-top: 50px;
+}
 .container {
-  height: 100%;
+  min-height: 100%;
   display: flex;
   justify-content: center;
   align-items: center; 
   flex-direction: column; 
-  padding-right: 15px;
-  padding-left: 15px;
+  padding: 20px 10px 80px;
   margin-right: auto;
   margin-left: auto;  /*when adding left and right padding with the max-width = 1200px,*/
   max-width: 1170px;  /* which is our large device breakpoint.*/
@@ -87,6 +95,12 @@ main {
 #page-loader.hide::after {
   content: none;
 }
+#page-loader.hide {
+  transition: transform 0.35s;
+  transform: scale(0);
+  transform-origin: 50% 50%;
+  border-radius: 50%;
+}
 #page-loader svg {
   position: fixed; 
   width: 50%;
@@ -119,13 +133,13 @@ main {
 }
 #logo {
   transition: all 0.35s;
+  text-align: center;
+  width: 100%;
+  display: block;
+  background-color: transparent;
+  color: white;
   border: none;
   outline: none;
-  background-color: transparent;
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  color: white;
   font-weight: bold;
   text-shadow: 0px 4px 0px rgba(0,0,0,0.7);
 }
@@ -308,8 +322,8 @@ div#results {
   transition: all 0.35s;
   border-radius: 4px;
   opacity: 0;
-  padding: 10px 20px;
-  width: 95%;
+  padding: 10px;
+  width: 100%;
   max-width: 700px;
 }
 div#results.show {
@@ -318,9 +332,21 @@ div#results.show {
 .results-container {
   background-color: white;
   border-radius: 4px;
-  padding: 10px 20px;
+  padding: 10px;
   margin: 15px 0;
   box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.7);
+}
+#results #answersCorrect {
+  text-align: center;
+}  
+#results #answersWrong .wrongAnswersNum {
+  text-decoration: underline;
+  font-weight: bolder;
+  color: #1c313a;
+}
+#results #answersWrong ul {
+  margin: 0;
+  padding: 0;
 }
 #results #answersWrong ul li {
   display: flex;
@@ -329,12 +355,4 @@ div#results.show {
 #results #answersWrong ul li span {
   width: 35%;
   text-align: center;
-}
-
-
-.hide {
-  transition: transform 0.35s;
-  transform: scale(0);
-  transform-origin: 50% 50%;
-  border-radius: 50%;
 }
